Mon May 24 15:39:39 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/IDL3_Plus/KitchenSink.idl:
        
          Added use case of a mixed parentage (abstract and
          concrete) interface in a template module.

Mon May 24 14:19:28 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Navigation/client.cpp:
          Implemented error handling.

Mon May 24 14:04:52 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
        * DAnCE/LocalityManager/Daemon/Deployment_Interceptors.cpp:
        * DAnCE/LocalityManager/Daemon/Locality_Manager.cpp:
        * DAnCE/LocalityManager/Daemon/Locality_Manager_Impl.cpp:
        * DAnCE/LocalityManager/Daemon/Locality_Manager_Task.cpp:
        * DAnCE/LocalityManager/Handler/LocalityActivator_Impl.cpp:
        * DAnCE/LocalityManager/Handler/Locality_Manager_Handler_Impl.cpp:
        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
        * DAnCE/tests/CIAO/Components/SimpleLocalProvider.mpc:
        * ciao/Deployment/Handlers/Connection_Handler.cpp:

          Fuzz.

Mon May 24 13:53:12 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/PSAT/ccm_dds_psat.idl:
          Make sure that rtiddsgen doesn't pick up ccm_dds idl

        * connectors/dds4ccm/tests/PSAT/ccm_dds_psat.mpc:
          Enabled several projects

Mon May 24 09:45:25 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Daemon/Locality_Manager.cpp:
        * DAnCE/LocalityManager/Daemon/Locality_Manager_Impl.cpp:
        * DAnCE/LocalityManager/Daemon/Locality_Manager_Task.cpp:
        * ciao/Deployment/Handlers/Connection_Handler.cpp:
        * ciao/Deployment/Handlers/Homed_Component_Handler.cpp:
        * tests/CIF/Common/CIF_Common.cpp:
        * tests/CIF/Navigation/client.cpp:
        * tests/CIF/Receptacle/client.cpp:
